--- a/curso_angular/src/app/app.component.html
+++ b/curso_angular/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>Hola</h1>
-<app-botones></app-botones>
+<div class="container">
+    <h1>Hola</h1>
+    <app-formulario2></app-formulario2>
+</div>
