--- a/curso_angular/src/app/formulario2/formulario2.component.html
+++ b/curso_angular/src/app/formulario2/formulario2.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-body">
-        <form (ngSubmit)="procesar()">
+        <form (ngSubmit)="procesar()" #formContact="ngForm">
             <div>
                 <label class="form-label">
                     Nombre:
@@ -25,12 +25,14 @@
                 </div>
             </div>
 
-            <button class="btn btn-primary mt-2">
+            <button class="btn btn-primary mt-2" [disabled]="formContact.invalid">
                 Enviar
             </button>
         </form>
     </div>
 </div>
+
+{{formContact.valid}}
 
 <!-- 
 {{persona | json}}
