--- a/curso_angular/src/app/app.component.html
+++ b/curso_angular/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
     <h1>Hola</h1>
-    <app-formulario3></app-formulario3>
+    <input type="text" class="form-control" [(ngModel)]="title">
+    <app-children title="{{title}}"></app-children>
 </div>
