--- a/curso_angular/src/app/app.component.html
+++ b/curso_angular/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <h1>Hola</h1>
-    <input type="text" class="form-control" [(ngModel)]="title">
-    <app-children title="{{title}}"></app-children>
+    <h1>Componente Padre</h1>
+    <input type="text" class="form-control mb-4" [(ngModel)]="title">
+    <app-children [(title)="title"]></app-children>
+    <!-- title="{{title}}" (titleChange)="title = $event" Es lo mismo que [(title)="title"] -->
 </div>
