--- a/curso_angular/src/app/children/children.component.html
+++ b/curso_angular/src/app/children/children.component.html
@@ -1,3 +1,3 @@
-{{title}}
 
-<input type="text" class="form-control" [(ngModel)]="title">
+<h1>{{title}}</h1>
+<input type="text" class="form-control" (keyup)="emitTitleChange()" [(ngModel)]="title">
