--- a/curso_angular/src/app/app.component.html
+++ b/curso_angular/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="container">
-    <h1>Componente Padre</h1>
-    <input type="text" class="form-control mb-4" [(ngModel)]="title">
-    <app-children [(title)="title"]></app-children>
-    <!-- title="{{title}}" (titleChange)="title = $event" Es lo mismo que [(title)="title"] -->
+    <h1>Servcios</h1>
+    <app-add-messages></app-add-messages>
+    <app-list-messages></app-list-messages>
 </div>
