--- a/routing/src/app/app.component.html
+++ b/routing/src/app/app.component.html
@@ -1,2 +1,19 @@
 <h1>Tema Enrutamiento</h1>
+
+<nav>
+  <ul>
+    <li>
+      <a routerLink="home" [routerLinkActive]="'active'">Home</a>
+    </li>
+
+    <li>
+      <a routerLink="contact" routerLinkActive="active">Contacto</a>
+    </li>
+
+    <li>
+      <a routerLink="about" routerLinkActive="active">Acerca de mi</a>
+    </li>
+  </ul>
+</nav>
+
 <router-outlet></router-outlet>
